add mongo logger add type field to company entity remove unnecessary endpoints to /statusinvest parent replaced directly call from StatusInvest to MongoDB new methods from repo mongo company entity fixing service tests (still need controller ones)